--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Game/Maps/Game_Map.Game_Map
 GlobalDefaultGameMode=/Game/Game/Blueprints/BP_Gamemode.BP_Gamemode_C
+EditorStartupMap=/Game/Game/Maps/Game_Map.Game_Map
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
