--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Game/Maps/Game_Map.Game_Map
+GameDefaultMap=/Game/Game/Maps/MainMenu_Map.MainMenu_Map
 GlobalDefaultGameMode=/Game/Game/Blueprints/BP_Gamemode.BP_Gamemode_C
 EditorStartupMap=/Game/Game/Maps/Game_Map.Game_Map
+GameInstanceClass=/Game/Game/Blueprints/BP_Gameinstance.BP_Gameinstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
