--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=EA8FA930490B9772BC0C35A571B6076A
+ProjectName=DeepWaters
 
 [StartupActions]
 bAddPacks=True
@@ -9,3 +10,4 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
